--- a/public/admin-style.css
+++ b/public/admin-style.css
@@ -87,7 +87,7 @@ h5 {
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 2% auto;
+    margin: 8% auto;
     flex: 50%;
 
 }
@@ -175,7 +175,7 @@ textarea#content {
 
 .edit-form.prosthiki-form {
     width: 90%;
-    margin: 2% auto;
+    margin: 6% auto;
 }
 
 .edit-form.prosthiki-form div {
@@ -367,6 +367,37 @@ h1{
     .log-admin .button{
         width: 50%;
     }
+
+    .edit-container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 5%;
+    }
+
+    .edit-form{
+        width: 90%;
+        margin:16% auto;
+    }
+
+    .edit-container img {
+        max-width: 100%;
+        max-height: 300px;
+        object-fit: contain;
+        flex: 50%;
+        align-self: flex-start;
+    }
+
+    .edit-form.prosthiki-form{
+        margin: 16% auto;
+    }
+
+    .edit-form.prosthiki-form div{
+        width: 100%;
+
+    }
 } 
+
+
 
 
