--- a/views/tickets.hbs
+++ b/views/tickets.hbs
@@ -278,6 +278,7 @@
                 .then(response => {
                     if (response.ok) {
                         console.log('Forms submitted successfully!');
+                        alert('Η αγορά ολοκληρώθηκε με επιτυχία!');
                         location.reload();
                     } else {
                         console.error('Failed to submit forms');
