--- a/views/admin-add.hbs
+++ b/views/admin-add.hbs
@@ -11,7 +11,7 @@
 
     <div class="image-link">
         <label for="link">Link Εικόνας</label>
-        <input type="url" id="link" name="link" placeholder="Πληκτρολογήστε το link της εικόνας.." required>
+        <input type="link" id="link" name="link" placeholder="Πληκτρολογήστε το link της εικόνας.." required>
     </div>
 
     <div class="xronologia">
@@ -45,11 +45,11 @@
     <div class="ekthesi">
         <div class="radios">
             <div class="radio-monimi">
-                <input type="radio" id="monimi" name="ekthesi" value="monimi" onclick="chooseRoom()" required>
+                <input type="radio" id="monimi" name="ekthesi" value="monimi" required>
                 <label for="monimi">Μόνιμη Έκθεση</label><br>
             </div>
             <div class="radio-periodiki">
-                <input type="radio" id="periodiki" name="ekthesi" value="periodiki" onclick="chooseRoom()" required>
+                <input type="radio" id="periodiki" name="ekthesi" value="apothiki" required>
                 <label for="periodiki">Αποθήκη</label><br>
             </div>
         </div>
