--- a/views/admin-edit.hbs
+++ b/views/admin-edit.hbs
@@ -12,7 +12,7 @@
 
         <div class="image-link">
             <label for="link">Link Εικόνας</label>
-            <input type="text" id="link" name="link" value="{{info.link}}">
+            <input type="link" id="link" name="link" value="{{info.link}}">
         </div>
 
         <div class="xronologia">
