--- a/views/collection.hbs
+++ b/views/collection.hbs
@@ -1,8 +1,8 @@
 <section>
 
-    <div class="filter-menu">
-        <input type="text" class="search" placeholder="Αναζητήστε κωδικό έργου...">
-    </div>
+    {{!-- <div class="filter-menu">
+        <input type="text" class="search" placeholder="Αναζητήστε τίτλο εικόνας...">
+    </div> --}}
 
 
 <section class="collection" id="collection">
