--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,5 +1,5 @@
 <header class="header">
-        <a href="/" class="logo">LOGO</a>
+        <a href="/" class="logo"><i class='bx bxs-home'></i></a>
 
         <input type="checkbox" id="check">
         <label for="check" class="icons">
