--- a/public/navbar.css
+++ b/public/navbar.css
@@ -82,6 +82,11 @@ nav a:hover::after {
 
 }
 
+.bx.bxs-home{
+    color: white;
+    font-size: 1.5em;
+}
+
 .icons {
     position: absolute;
     font-size: 4rem;
